[metadata]
name = pystring-killergriffn
version = 0.0.1
author = killergriffn
author_email = kilgrif22033@gmail.com
description = A small package to process strings made for a personal project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/killgriff22/pystring
project_urls =
    Bug Tracker = https://github.com/killgriff22/pystring/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src